--- a/03-CSS/styles.css
+++ b/03-CSS/styles.css
@@ -2,6 +2,30 @@
     font-family: 'Roboto', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgba(24, 78, 143, 0.259);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(24, 78, 143, 0.616);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(24, 78, 143, 0.411);
+}
+
+section:first-of-type{
+    padding-top:0px;
+}
+
+section{
+    left:0%;
+    padding-top: 55px;
+}
 .logo{
     text-decoration:none;
     color:cornflowerblue;
@@ -19,28 +43,26 @@
 }
 
 h1{
-    font-size:50px;
+    font-size:75px;
+    margin-top:45px;
+    margin-bottom: 45px;
 }
 
 .column{
     flex: 50%;
+    height: 100%;
 }
 
 .blue{
     color:#184d8f;
 }
 
-td{
-    
-}
-
 .over{
     position:absolute;
-    border: 2px;
+    border: 3px solid white;
     border-radius: 2%;
     left:25%;
     box-shadow: 2px 2px 15px 3px #184d8f;
-    border-color: #184d8f;
     background-color: #fff;
     opacity: 0.85;
     padding: 12px;
@@ -60,10 +82,25 @@ td{
     flex-grow: 1;
     margin-top: 12px;
     margin-bottom: 12px;
+    z-index: -1;
 }
 
 table {
   border-spacing: 50px 10px;
+}
+
+h2, h3{
+    font-size: 60px;
+}
+
+h3{
+    margin: 60px 0px  45px 0px;
+
+}
+
+.container-row{
+    display:flex;
+    flex-direction: column;
 }
 
 p{
@@ -82,18 +119,35 @@ p.gray{
     color:gray;
 }
 
+svg{
+    filter:opacity(0.95)
+}
+
 svg.yellow{
-    border-radius: 100%;
-    box-shadow: 0px 2px 15px 1px goldenrod;
+    border-radius: 10%;
+    background-color: khaki;
+    box-shadow: 0px 1px 12px 1px rgba(209, 166, 56, 0.678);
 }
 
 svg.blue{
-    border-radius: 100%;
-    box-shadow: 0px 2px 15px 1px #184d8f;
+    border-radius: 10%;
+    color:#1331b9;
+    background-color: lightsteelblue;
+    box-shadow: 0px 1px 12px 1px rgba(28, 30, 151, 0.678);
 }
 
 .container{
     display:flex;
+}
+
+.container.justify{
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+footer{
+    margin-top:150px;
+    background-color: rgba(241, 245, 255, 0.719);
 }
 
 header .container{
@@ -108,8 +162,8 @@ main .container{
 
 
 .left{
-    padding-left: 10%;
-    margin-right:10%;
+    padding-left: 8%;
+    margin-right:5%;
 }
 
 .derecha{
@@ -128,6 +182,11 @@ main .container{
     padding-right: 0px;
     object-position: left -10%;
     right: 0%;
+    width: 44%;
+}
+
+.right-image{
+    width: 41%;
 }
 
 .yellow{
@@ -142,8 +201,121 @@ main .container{
     opacity: 1;
 }
 
-.nowrap{
+.left-text{
+    left: 0px;
+    width:960px;
+}
+
+.characteristics{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-right: 8%;
+}
+
+div.box{
+    margin: 0 8px;
+    border: 3px solid rgba(241, 245, 255, 0.719);
+    border-width: 1px;
+    width: 380px;
+    height: 385px;
+    border-radius: 8%;
+}
+
+div.box:hover{
+    box-shadow: 0px 2px 10px rgba(24, 78, 143, 0.849);
     
+}
+
+.left-image{
+    width:50%;
+    left:0%;
+}
+
+.right-image{
+    width:50%;
+    right:0%;
+
+}
+
+div.box svg{
+    color:#1331b9;
+    width: 40px;
+    height: 40px;
+    background-color: rgb(241, 245, 255);
+    border: 3px solid white;
+    border-radius: 8%;
+    padding: 18px;
+    position: relative;
+    top:4%;
+    left: 4%;
+}
+
+.box p:first-of-type{
+    font-size: 30px;
+    font-weight: 500;
+    margin:35px 4% ;
+}
+
+.box p:last-of-type{
+    position: relative;
+    bottom:0%;
+    margin:32px 4%;
+    font-size: 22px;
+}
+
+div.item-box p{
+    margin:0px;
+}
+
+
+div.item-box{
+    border: 3px solid rgba(241, 245, 255, 0.719);
+    border-width: 1px;
+    margin-top:15px;
+    border-radius: 8%;
+    display:flex;
+    align-items: center;
+    gap: 15px;
+    padding: 22px 10px;
+}
+
+div.item-box svg{
+    color:#1331b9;
+    width: 22px;
+    height: 22px;
+    background-color: rgb(241, 245, 255);
+    padding: 3px;
+    box-shadow: none;
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    height: 50vh;
+    column-gap: 50px;
+    row-gap: 50px;
+    padding-top:20px;
+    justify-items: center;
+}
+
+.grid-item{
+    border: 3px solid rgba(241, 245, 255, 0.719);
+    border-width: 5px;
+    border-radius: 8%;
+    
+    width: calc(100%);
+}
+
+.grid-item svg{
+    color:#1331b9;
+    width: 20px;
+    height: 20px;
+    box-shadow: none;
+    background-color: rgb(241, 245, 255);
+    border: 3px solid white;
+    border-radius: 8%;
+    padding: 11px;
 }
 
 
@@ -156,3 +328,56 @@ main .container{
     opacity: 0.3;
     padding: -30px;
 }
+
+
+.triangle-left {
+	width: 0;
+	height: 0;
+	border-top: 80px solid transparent;
+	border-bottom: 80px solid transparent;
+	border-right: 50px solid #999 ;
+    opacity: 0.3;
+    padding: -30px;
+    position:absolute;
+    right:0%;
+    top:870px;
+    z-index: -1;
+}
+
+.triangle-right {
+	width: 0;
+	height: 0;
+	border-top: 80px solid transparent;
+	border-bottom: 80px solid transparent;
+	border-left: 50px solid #999 ;
+    opacity: 0.3;
+    padding: -30px;
+    position:absolute;
+    left:0%;
+    top:870px;
+    z-index: -1;
+}
+
+footer .container{
+    align-items: flex-start;
+}
+
+footer .container .item:first-of-type{
+    flex-grow: 3;
+}
+
+footer .container .item:not(:first-of-type){
+    width: 300px;
+}
+
+footer p{
+    max-width: 300px;
+}
+
+
+.item a{
+    display:block;
+    text-decoration: none;
+    padding-left:0;
+}
+
